# tobit_reg

./: LICENSE  README.md  pyproject.toml
src/tobit_reg/: tobit_reg.py
tests/: tobit_test.py
tests/data/: tobit_unittest.csv
